entities: harden two Map/Set.copyOf order hazards, fix a stale V2__slugs.sql javadoc reference
EntityState.present and EntityFacts.of's byId/byIds now keep their existing
deterministic order (EnumSet ordinal / LinkedHashMap insertion) via
unmodifiableSet/LinkedHashMap instead of Map.copyOf/Set.copyOf, which return a
salted ImmutableCollections.SetN/MapN whose iteration order differs per JVM
run. Neither is a live bug today (EntityState's set is only ever read via
contains(), and EntityFacts feeds Nesting.check, which explicitly sorts its
violations) but both are one incidental change away from repeating the
EntityTransitionService defect this epic already fixed once.

Slugs.slugify's javadoc referenced a V2__slugs.sql backfill that no longer
exists in this lineage: it was part of the old H2 migration history, deleted
when the epics module moved onto its own PostgreSQL database and restarted at
V1. Corrected the sentence to say what actually happened instead of dropping
the reference outright.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>